apps/myapp/base/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-canary
  namespace: myapp-dev
spec:
  selector:
    app: myapp
    role: frontend
    version: canary
  ports:
    - name: http
      port: 80
      targetPort: http
