apps/myapp/base/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-stable
  namespace: myapp-dev
spec:
  selector:
    app: myapp
    role: frontend
    version: stable
  ports:
    - name: http
      port: 80
      targetPort: http
