apps/myapp/base/ingress-primary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: myapp-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: myapp-dev.infytest.com    # <-- change or map in DNS/hosts
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-stable
                port:
                  number: 80
