apps/myapp/base/networkpolicy-allow-ingress-frontend-from-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-frontend-from-ingress
  namespace: myapp-dev
spec:
  podSelector:
    matchLabels:
      app: myapp
      role: frontend          # <- only these specific pods accept external traffic
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
      ports:
        - protocol: TCP
          port: 80
