apps/myapp/base/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress-egress
  namespace: myapp-dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
